<resources>
    <string name="app_name">CKW Search</string>
    <string name="app_version">2.0.1-SNAPSHOT</string>
    <string name="app_version_about">Version</string>
    <string name="hello">Hello ckw search!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="settingSummary">Application Preferences</string>
    <string name="synchronization_progress_bar_title">Synchronizing</string>
    <string name="error_title">Error !</string>
    <string name="country_code_download_msg">Downloading CountryCode please wait...</string>
    <string name="upload_search_logs_download_msg">Uploading Search Logs please wait...</string>
    <string name="keyword_download_msg">Downloading keywords please wait...</string>
    <string name="farmer_download_msg">Downloading farmers please wait...</string>
    <string name="weather_download_msg">Downloading Weather please wait...</string>
    <string name="ictc_farmer_download_msg">Downloading Farmers Registered please wait...</string>
    <string name="ictc_upload_logs">Uploading Logs please wait...</string>
    <string name="synchronization_complete_msg">Synchronization Complete.</string>
    <string name="processing_keywords_msg">Processing Keywords</string>
    <string name="processing_farmers_msg">Processing Farmers</string>
    <string name="removing_keywords_msg">Removing Old Keywords</string>
    <string name="downloading_images_msg">Downloading Images</string>
    <string name="processing_images_msg">Processing Images</string>
    <string name="error_downloading_keywords">Error downloading keywords</string>
    <string name="error_processing_keywords">Error processing keywords</string>
    <string name="error_downloading_farmers">Error downloading farmers</string>
    <string name="error_processing_farmers">Error processing farmers</string>
    <string name="error_uploading_searchlogs">Error uploading search logs</string>
    <string name="error_downloading_images">Error downloading images</string>
    <string name="error_connecting_to_server">An error has occured while communicating with the server.
        Please check your connection settings.
    </string>
    <string name="ictc_server_url">http://104.236.220.225:45805/</string>
    <string name="ictc_title_server_url">ICTC Server Url</string>
    <string name="ictc_title_measurement_server_url">Send Measurement Url</string>
    <string name="ictc_summary_server_url">The url of the server to synchronize ICTC with.</string>
    <string name="server_url">http://sandbox-ictchallenge.cs80.force.com/getSearchRequest</string>
    <string name="title_server_url">Server Url</string>
    <string name="summary_server_url">The url of the server to synchronize with.</string>
    <string name="setting_connection">Connection</string>
    <string name="summary_connection">Connection Related Settings</string>
    <string name="connection_preferences">Connection</string>
    <string name="action_search">Search</string>
    <string name="action_new_search">New Search</string>
    <string name="farmer_id_text">Farmer Id</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="favourite_searches">Favourite Searches</string>
    <string name="synchronise">Synchronize</string>
    <string name="country_code_server_url_path">search/getCountryCode</string>
    <string name="keyword_server_url_path">search/getsearchkeywords</string>
    <string name="farmers_server_url_path">SearchGetFarmers</string>
    <string name="image_server_url_path">search/getsfimages?imageId=</string>
    <string name="search_log_url_path">search/search</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="sample_text">sample text</string>
    <string name="background_synchronization">Background Synchronization</string>
    <string name="background_synchronization_summary">Background Synchronization.
        Settings are set in reference to the current date.
    </string>
    <string name="background_sync_interval">30</string>
    <string name="background_sync_interval_summary">Determines how often the background synchronization will take
        place.
    </string>
    <string name="background_sync_interval_title">Background Synchronization Interval</string>
    <string name="background_sync_enabled_title">Enable Background Synchronization</string>
    <string name="background_sync_enabled_summary">Turns on/off the background synchronization</string>
    <string name="background_sync_interval_units_title">Interval Units</string>
    <string name="background_sync_interval_units_summary">Time units for the synchronization interval</string>
    <string name="background_sync_interval_unit_default">1</string>
    <string name="send_message">Send Message</string>
    <string name="share_using">Send Message With</string>
    <string name="setting_general">General</string>
    <string name="prompt_for_clientid_title">Prompt for Client Identifier</string>
    <string name="prompt_for_clientid_summary">Enable the prompting of the identifier of the person you are serving
    </string>
    <string name="setting_general_summary">General Settings</string>
    <string name="clientid_dialog_message">Search For Farmer</string>
    <string name="clientid_dialog_title">Farmer Identifier Prompt</string>
    <string name="missing_client_id">Missing Farmer Information</string>
    <string name="mark_favourite">Favourite</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="test_searching_enabled_title">Enable Test Searching</string>
    <string name="test_searching_enabled_summary">Search logs will be marked as test logs</string>
    <string name="uploading_search_logs">Uploading Search Logs</string>
    <string name="ok">Ok</string>
    <string name="search_farmer">Search for Farmer Name</string>
    <string name="content_test_size">17sp</string>
    <string name="app_label">Smart Ex</string>
    <string name="search_hint">Search</string>
    <string name="home">Home</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prefServerDefault">http://104.236.220.225:45805/ICTC/</string>
    <string name="prefServerYabr3">http://188.226.189.149/cch/yabr3/</string>
    <string name="prefServerTimeoutConnectionDefault">10000</string>
    <string name="prefServerTimeoutResponseDefault">20000</string>
    <string name="prefs_api_key">prefApiKey</string>
    <string name="prefs_highlightCompleted">prefHighlightCompleted</string>
    <string name="prefs_language">prefLanguage</string>
    <string name="prefs_last_media_scan">prefLastMediaScan</string>
    <string name="prefs_metadata">prefMetadata</string>
    <string name="prefs_schedule_reminders_no">prefNoScheduleReminders</string>
    <string name="prefs_schedule_reminders_show">prefShowScheduleReminders</string>
    <string name="prefs_section_numbers_show">prefShowSectionNumbers</string>
    <string name="prefs_server">prefServer</string>
    <string name="prefs_server_timeout_connection">prefServerTimeoutConnection</string>
    <string name="prefs_server_timeout_response">prefServerTimeoutResponse</string>
    <string name="prefs_username">prefUsername</string>
    <string name="prefs_points">prefPoints</string>
    <string name="prefs_badges">prefBadges</string>
    <string name="prefs_background_data_connect">true</string>
    <string name="prefs_scoring_enabled">prefScoringEnabled</string>
    <string name="username">username</string>
    <string name="fullname">fullname</string>
    <string name="about_text">This application was developed by Grameen Foundation. Content contributions were made by Farm Radio International and Digital Green The application was developed with funding from USAID for the ICT Challenge Project.</string>
    <string name="login_complete">Logged in</string>
    <string name="error_login">Invalid username/password\nPlease try again</string>
    <string name="error_connection">Error connecting to server. Please check you have an active internet connection and try again.</string>
    <string name="error_connection_required">You need an active internet connection to access this page. Please turn on wifi or mobile internet connection and try again.</string>
    <string name="error_processing_response">Error processing response</string>
    <string name="fontello_logo">&#xe8ad;</string>
    <string name="fontello_search">&#xea01;</string>
    <string name="fontello_x_mark">&#xe887;</string>
    <string name="fontello_x_mark_masked">&#xe885;</string>
    <string name="fontello_microfon">&#xea18;</string>
    <string name="fontello_user">&#xe800;</string>
    <string name="fontello_password">&#xe9df;</string>
    <string name="fontello_upload">&#xeb30;</string>
    <string name="fontello_play">&#xea7d;</string>
    <string name="fontello_heart_empty">&#xe9b5;</string>
    <string name="fontello_heart_full">&#xe9b6;</string>
    <string name="fontello_drag_and_drop">&#xe988;</string>
    <string name="material_icon_account">&#xe800;</string>
    <string name="material_icon_account_multiple">&#xe8dc;</string>
    <string name="material_icon_bookmark">&#xe921;</string>
    <string name="material_icon_bike">&#xe915;</string>
    <string name="material_icon_box_full">&#xe86b;</string>
    <string name="material_icon_clock">&#xe881;</string>
    <string name="material_icon_check">&#xe867;</string>
    <string name="material_icon_checked_full">&#xe86f;</string>
    <string name="material_icon_check_empty">&#xe86a;</string>
    <string name="material_icon_check_full">&#xe86e;</string>
    <string name="material_icon_city">&#xe878;</string>
    <string name="material_icon_cart">&#xe857;</string>
    <string name="material_icon_chevron_down">&#xe874;</string>
    <string name="material_icon_chevron_up">&#xe877;</string>
    <string name="material_icon_date">&#xe848;</string>
    <string name="material_icon_drink">&#xea08;</string>
    <string name="material_icon_dollar">&#xe892;</string>
    <string name="material_icon_email">&#xe99c;</string>
    <string name="material_icon_eat">&#xeac6;</string>
    <string name="material_icon_friends">&#xe8d5;</string>
    <string name="material_icon_flag">&#xe96a;</string>
    <string name="material_icon_favorite">&#xe9b6;</string>
    <string name="material_icon_go">&#xea04;</string>
    <string name="material_icon_go_left">&#xe875;</string>
    <string name="material_icon_go_right">&#xe876;</string>
    <string name="material_icon_home_variant">&#xe9bd;</string>
    <string name="material_icon_home">&#xe9be;</string>
    <string name="material_icon_hotels">&#xeae3;</string>
    <string name="material_icon_heart_outline">&#xe9b3;</string>
    <string name="material_icon_headphones">&#xe9b1;</string>
    <string name="material_icon_human">&#xe9c5;</string>
    <string name="material_icon_headline">&#xeb40;</string>
    <string name="material_icon_image_box">&#xe952;</string>
    <string name="material_icon_info">&#xe9d4;</string>
    <string name="material_icon_info_box">&#xe896;</string>
</resources>