<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/connection_preferences">
        <EditTextPreference
                android:key="server_url"
                android:title="@string/title_server_url"
                android:summary="@string/summary_server_url"
                android:dialogTitle="@string/title_server_url"
                android:defaultValue="@string/server_url"/>

        <EditTextPreference
                android:key="ictc_server_url"
                android:title="@string/ictc_title_server_url"
                android:summary="@string/ictc_summary_server_url"
                android:dialogTitle="@string/ictc_title_server_url"
                android:defaultValue="@string/ictc_server_url"/>
        <EditTextPreference
            android:key="send_measurement_url"
            android:title="@string/ictc_title_measurement_server_url"
            android:summary="@string/ictc_summary_server_url"
            android:dialogTitle="@string/ictc_title_server_url"
            android:defaultValue="getMeasurement"/>
    </PreferenceCategory>
</PreferenceScreen>