<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item
            android:id="@+id/action_nav_forward"
            android:orderInCategory="100" android:showAsAction="always"
            android:title="@string/action_forward" android:icon="@drawable/navigation_forward"
            android:visible="false"/>-->
    <!--<item android:id="@+id/action_synchronise"-->
          <!--android:showAsAction="never"-->
          <!--android:title="@string/synchronise"-->
          <!--android:icon="@drawable/ic_refresh"/>-->
    <item
            android:id="@+id/search_user"
            android:icon="@drawable/ic_search_white_24dp"
            app:actionViewClass="android.support.v7.widget.SearchView"
            android:hint="@string/search_farmer"
            app:showAsAction="ifRoom|collapseActionView"
            android:title="Search Farmer"/>


    <item android:id="@+id/home"
          app:showAsAction="never"
          android:title="@string/home"
          android:icon="@mipmap/ic_refresh"/>

    <item android:id="@+id/action_refresh_farmer"
            app:showAsAction="never"
          android:title="Refresh Farmer data"
          android:icon="@mipmap/ic_refresh"/>


    <item android:id="@+id/send_bulk_sms"
          app:showAsAction="never"
          android:title="Bulk SMS"
          android:icon="@drawable/ic_sms_black_24dp"
        />
    <item
            android:id="@+id/action_settings"
            app:showAsAction="never"
            android:title="@string/action_settings"
            android:icon="@mipmap/action_settings"/>

    <item android:id="@+id/action_about"
            app:showAsAction="never"
          android:title="@string/action_about"
          android:icon="@mipmap/action_about"/>

    <item android:id="@+id/action_logout"
          app:showAsAction="never"
          android:title="Logout"
          android:icon="@mipmap/ic_refresh"/>
</menu>